--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -6,17 +6,50 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <img src="INSERT IMAGE" alt=""placeholder Image">
-        </a>
+        <a href="index.html"><img src="ICON IMAGE" alt="icon Image"></a>
 
         <nav>
             <ul>
-                <li><a href="Link">Link1</a></li>
-                <li><a href="Link">Link2</a></li>
-                <li><a href="Link">Link3</a></li>
+                <li><a href="COURSES">Link1</a></li>
+                <li><a href="PRICING">Link2</a></li>
+                <li><a href="LOGIN">Link3</a></li>
             </ul>   
         </nav>
+
+        <section>
+            <div>
+                <h1>Get schooled</h1>
+                <p>SMILES GRIN LAUGH</p>
+                <button>REGISTER FOR FREE</button>
+            </div>
+            <div>
+                <h2>Learn from the pros</h2>
+                <div>
+                    <img src="IMAGE1" alt="IMAGE1">
+                    <h3>Phillip Masey</h3>
+                    <p>« Smile of the year » 2018 - 2019</p>
+                </div>
+                <div>
+                    <img src="IMAGE1" alt="IMAGE1">
+                    <h3>Nannie Lawrence</h3>
+                    <p>Best « little smile » 2017</p>
+                </div>
+                <div>
+                    <img src="IMAGE1" alt="IMAGE1">
+                    <h3>Bruce Walters</h3>
+                    <p>Best « Friend Smile » live performance 2019</p>
+                </div>
+                <div>
+                    <img src="IMAGE1" alt="IMAGE1">
+                    <h3>Henry Hughes</h3>
+                    <p>« 24h smiles » winner 2016 - 2019</p>
+                </div>
+            </div>
+
+        </section>
     </header>
+    <main>
+
+    </main>
 </body>
 </html>
