--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -30,26 +30,34 @@
                     <p>« Smile of the year » 2018 - 2019</p>
                 </div>
                 <div>
-                    <img src="IMAGE1" alt="IMAGE1">
+                    <img src="IMAGE2" alt="IMAGE2">
                     <h3>Nannie Lawrence</h3>
                     <p>Best « little smile » 2017</p>
                 </div>
                 <div>
-                    <img src="IMAGE1" alt="IMAGE1">
+                    <img src="IMAGE3" alt="IMAGE3">
                     <h3>Bruce Walters</h3>
                     <p>Best « Friend Smile » live performance 2019</p>
                 </div>
                 <div>
-                    <img src="IMAGE1" alt="IMAGE1">
+                    <img src="IMAGE4" alt="IMAGE4">
                     <h3>Henry Hughes</h3>
                     <p>« 24h smiles » winner 2016 - 2019</p>
                 </div>
             </div>
-
         </section>
     </header>
     <main>
-
+        <section>
+            <div>
+                <img src="IMAGE5" alt="IMAGE5">
+                <div>
+                    <blockquote>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</blockquote>
+                    <p>Person Name</p>
+                    <p>weather presenter</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
