--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -50,11 +50,74 @@
     <main>
         <section>
             <div>
-                <img src="IMAGE5" alt="IMAGE5">
+                <img src="QUOTE" alt="QUOTE IMAGE">
                 <div>
                     <blockquote>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</blockquote>
                     <p>Person Name</p>
                     <p>weather presenter</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h1>Most popular tutorials</h1>
+            <div>
+                <div>
+                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                    <h2>Diagonal Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
+                        <h3>Philip Masey</h3>
+                    </div>
+                    <div>
+                        <div><img src="STARS" alt="STARS"></div>
+                        <p>8 min</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                    <h2>Sad Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
+                        <h3>Philip Masey</h3>
+                    </div>
+                    <div>
+                        <div><img src="STARS" alt="STARS"></div>
+                        <p>8 min</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                    <h2>Natural Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
+                        <h3>Philip Masey</h3>
+                    </div>
+                    <div>
+                        <div><img src="STARS" alt="STARS"></div>
+                        <p>8 min</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                    <h2>Happy Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
+                        <h3>Philip Masey</h3>
+                    </div>
+                    <div>
+                        <div><img src="STARS" alt="STARS"></div>
+                        <p>8 min</p>
+                    </div>
                 </div>
             </div>
         </section>
