added footer with text

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -173,5 +173,18 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div>
+            <div>
+                <img src="FOOTER IMG" alt="FOOTER IMG">
+                <div>
+                    <a href=""><img src="FB img" alt="FB img"></a>
+                    <a href=""><img src="X img" alt="X img"></a>
+                    <a href=""><img src="INSTA img" alt="INSTA img"></a>
+                </div>
+            </div>
+            <p>©smileschool 2020</p>
+        </div>
+    </footer>
 </body>
 </html>
