added div for logo and nav' git push ' '

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -6,15 +6,17 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="ICON IMAGE" alt="icon Image"></a>
+        <div>
+            <a href="index.html"><img src="ICON IMAGE" alt="icon Image"></a>
 
-        <nav>
-            <ul>
-                <li><a href="COURSES">Link1</a></li>
-                <li><a href="PRICING">Link2</a></li>
-                <li><a href="LOGIN">Link3</a></li>
-            </ul>   
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="COURSES">Link1</a></li>
+                    <li><a href="PRICING">Link2</a></li>
+                    <li><a href="LOGIN">Link3</a></li>
+                </ul>   
+            </nav>
+        </div>
 
         <section>
             <div>
