--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -2,26 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport", content="width=devide-width, initial-scale=1.0">
+    <meta name="viewport", content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div>
-            <a href="index.html"><img src="ICON IMAGE" alt="icon Image"></a>
+        <div class="header_div">
+            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
 
-            <nav>
-                    <li><a href="COURSES">Link1</a></li>
-                    <li><a href="PRICING">Link2</a></li>
-                    <li><a href="LOGIN">Link3</a></li>
+            <nav class="header_nav">
+                <a class="nav_link" href="*LINK*">COURSES</a></li>
+                <a class="nav_link" href="*LINK*">PRICING</a></li>
+                <a class="nav_link" href="*LINK*">LOGIN</a></li>
             </nav>
         </div>
 
-        <section>
-            <div>
+        <section class="banner_section">
+            <!--Banner-->
+            <div class="banner_div">
                 <h1>Get schooled</h1>
-                <p>SMILES GRIN LAUGH</p>
+                <ul>
+                    <li>SMILES</li>
+                    <li>GRIN</li>
+                    <li>LAUGH</li>
+                </ul>
                 <button>REGISTER FOR FREE</button>
             </div>
             <div>
@@ -47,6 +52,7 @@
                     <p>« 24h smiles » winner 2016 - 2019</p>
                 </div>
             </div>
+            <!--Banner END-->
         </section>
     </header>
     <main>
