--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -1,181 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport", content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <title>School Page</title>
 </head>
+
 <body>
     <header>
-        <div class="header_div">
-            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
-
-            <nav class="header_nav">
-                <a class="nav_link" href="*LINK*">COURSES</a></li>
-                <a class="nav_link" href="*LINK*">PRICING</a></li>
-                <a class="nav_link" href="*LINK*">LOGIN</a></li>
-            </nav>
-        </div>
-
-        <section class="banner_section">
-            <!--Banner-->
-            <div class="banner_div">
-                <h1>Get schooled</h1>
-                <ul>
-                    <li>SMILES</li>
-                    <li>GRIN</li>
-                    <li>LAUGH</li>
-                </ul>
-                <button>REGISTER FOR FREE</button>
-            </div>
-            <div>
-                <h2>Learn from the pros</h2>
-                <div>
-                    <img src="IMAGE1" alt="IMAGE1">
-                    <h3>Phillip Masey</h3>
-                    <p>« Smile of the year » 2018 - 2019</p>
-                </div>
-                <div>
-                    <img src="IMAGE2" alt="IMAGE2">
-                    <h3>Nannie Lawrence</h3>
-                    <p>Best « little smile » 2017</p>
-                </div>
-                <div>
-                    <img src="IMAGE3" alt="IMAGE3">
-                    <h3>Bruce Walters</h3>
-                    <p>Best « Friend Smile » live performance 2019</p>
-                </div>
-                <div>
-                    <img src="IMAGE4" alt="IMAGE4">
-                    <h3>Henry Hughes</h3>
-                    <p>« 24h smiles » winner 2016 - 2019</p>
-                </div>
-            </div>
-            <!--Banner END-->
-        </section>
+        <a href="">
+            <img src="images/logo.png" alt="SmileSchool logo">
+        </a>
+        <nav>
+            <a href="">COURSES</a>
+            <a href="">PRICING</a>
+            <a href="">LOGIN</a>
+        </nav>
     </header>
     <main>
-        <section>
+        <section id="section1">
             <div>
-                <img src="QUOTE" alt="QUOTE IMAGE">
-                <div>
-                    <blockquote>« Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!</blockquote>
-                    <p>Person Name</p>
-                    <p>weather presenter</p>
+                <h1 id="big-title">Get schooled</h1>
+                <p id="words-title">SMILES GRIN LAUGH</p>
+                <button type="button" class="register-button">REGISTER FOR FREE</button>
+            </div>
+            <div>
+                <h2 id="learn-title"><em>Learn</em> from the pros</h2>
+                <div id="list-of-pros">
+                    <div class="pros-details">
+                        <img src="images/1.png" alt="Phillip Massey">
+                        <h3>Phillip Massey</h3>
+                        <p>« Smile of the year » 2018 - 2019</p>
+                    </div>
+                    <div class="pros-details">
+                        <img src="images/6.png" alt="Nannie Lawrence">
+                        <h3>Nannie Lawrence</h3>
+                        <p>Best « little smile » 2017</p>
+                    </div>
+                    <div class="pros-details">
+                        <img src="images/7.png" alt="Bruce Walters">
+                        <h3>Bruce Walters</h3>
+                        <p>Best « Friend Smile » live performance 2019</p>
+                    </div>
+                    <div class="pros-details">
+                        <img src="images/8.png" alt="Henry Hughes">
+                        <h3>Henry Hughes</h3>
+                        <p>« 24h smiles » winner 2016 - 2019</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section>
-            <h1>Most popular tutorials</h1>
-            <div>
+        <section id="section2">
+            <div id="quote-block">
+                <img src="images/quote.png" alt="Person Name">
                 <div>
-                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                    <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better
+                        place to learn smiling. And it’s so fun!</blockquote>
+                    <p id="author-quote">Person Name</p>
+                    <p id="author-job">weather presenter</p>
+                </div>
+            </div>
+        </section>
+        <section id="section3">
+            <h1>Most <em>popular</em> tutorials</h1>
+            <div id="list-of-videos">
+                <div class="videos-details">
+                    <img src="images/diago.png" alt="video preview">
                     <h2>Diagonal Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
-                        <h3>Philip Masey</h3>
+                    <div class="author-video">
+                        <img class="1_" src="images/1.png" alt="Phillip Massey">
+                        <h3>Phillip Massey</h3>
                     </div>
-                    <div>
-                        <div><img src="STARS" alt="STARS"></div>
+                    <div class="video-rate">
+                        <div>
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_no.png" alt="star">
+                        </div>
                         <p>8 min</p>
                     </div>
                 </div>
-            </div>
-            <div>
-                <div>
-                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                <div class="videos-details">
+                    <img src="images/sad smile.png" alt="video preview">
                     <h2>Sad Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
-                        <h3>Philip Masey</h3>
+                    <div class="author-video">
+                        <img class="1_" src="images/1.png" alt="Phillip Massey">
+                        <h3>Phillip Massey</h3>
                     </div>
-                    <div>
-                        <div><img src="STARS" alt="STARS"></div>
+                    <div class="video-rate">
+                        <div>
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_no.png" alt="star">
+                        </div>
                         <p>8 min</p>
                     </div>
                 </div>
-            </div>
-            <div>
-                <div>
-                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                <div class="videos-details">
+                    <img src="images/natural smile.png" alt="video preview">
                     <h2>Natural Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
-                        <h3>Philip Masey</h3>
+                    <div class="author-video">
+                        <img class="1_" src="images/1.png" alt="Phillip Massey">
+                        <h3>Phillip Massey</h3>
                     </div>
-                    <div>
-                        <div><img src="STARS" alt="STARS"></div>
+                    <div class="video-rate">
+                        <div>
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_no.png" alt="star">
+                        </div>
                         <p>8 min</p>
                     </div>
                 </div>
-            </div>
-            <div>
-                <div>
-                    <img src="VIDEO IMAGE1" alt="VIDEO IMAGE!">
+                <div class="videos-details">
+                    <img src="images/happy smile.png" alt="video preview">
                     <h2>Happy Smile</h2>
                     <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                    <div>
-                        <img src="AUTHOR IMG" alt="AUTHOR IMG">
-                        <h3>Philip Masey</h3>
+                    <div class="author-video">
+                        <img class="1_" src="images/1.png" alt="Phillip Massey">
+                        <h3>Phillip Massey</h3>
                     </div>
-                    <div>
-                        <div><img src="STARS" alt="STARS"></div>
+                    <div class="video-rate">
+                        <div>
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_yes.png" alt="star">
+                            <img src="images/star_no.png" alt="star">
+                        </div>
                         <p>8 min</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section>
-            <h1>Free membership</h1>
-            <div>
-                <div>
-                    <img src="smile" alt="smile">
+        <section id="section4">
+            <h1 id="membership-title"><em>Free</em> membership</h1>
+            <div id="list-of-membership">
+                <div class="membership-details">
+                    <img src="images/smile.png" alt="smile">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="smile" alt="smile">
+                <div class="membership-details">
+                    <img src="images/smile.png" alt="smile">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="smile" alt="smile">
+                <div class="membership-details">
+                    <img src="images/smile.png" alt="smile">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="smile" alt="smile">
+                <div class="membership-details">
+                    <img src="images/smile.png" alt="smile">
                     <h2>Lorem ipsum</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
-            <button>REGISTER FOR FREE</button>
+            <button type="button" class="register-button">REGISTER FOR FREE</button>
         </section>
-        <section>
-            <h1>F.A.Q.</h1>
-            <div>
+        <section id="section5">
+            <h1 id="faq-title">F.A.Q.</h1>
+            <div id="list-of-questions">
                 <div>
                     <div>
                         <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                     <div>
                         <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
                 <div>
                     <div>
                         <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                     <div>
                         <h2>How does this work?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
             </div>
@@ -183,16 +214,23 @@
     </main>
     <footer>
         <div>
-            <div>
-                <img src="FOOTER IMG" alt="FOOTER IMG">
-                <div>
-                    <a href=""><img src="FB img" alt="FB img"></a>
-                    <a href=""><img src="X img" alt="X img"></a>
-                    <a href=""><img src="INSTA img" alt="INSTA img"></a>
+            <div id="logos-footer">
+                <img src="images/logo.png" alt="SmileSchool">
+                <div id="logos-socialnetwork">
+                    <a href="">
+                        <img src="images/Facebook_White.png" alt="Facebook">
+                    </a>
+                    <a href="">
+                        <img src="images/Twitter_White.png" alt="Twitter">
+                    </a>
+                    <a href="">
+                        <img src="images/Instagram_White.png" alt="Instagram">
+                    </a>
                 </div>
             </div>
             <p>©smileschool 2020</p>
         </div>
     </footer>
 </body>
+
 </html>
